tests/parser/tests/cases/should_fail/incomplete_tuple_literal_name_assignment/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:33
1 |   k : (str, bar: u8) -> u32 = (k = ); // Error here (should report that there should be an expression)
  |                                   ^ here
  = note: expected an expression.
